# proxy-wasm-jwt-validator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.cargo/: audit.toml
.github/workflows/: ci.yml
scripts/: test-vmod-wasm.sh
src/: config.rs  lib.rs  token.rs
tests/: vmod_wasm_jwt_validator.vtc
